--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,14 +1,24 @@
+
+
 body{
-  margin: 50px;
-  width: 30%;
+  /*margin: 50px;
+  width: 30%;*/
+  /*background-color: Seashell;*/
 
 
   /*font-family: Helvetica arial sans-serif;*/
 }
-
-h1{
-  color: red;
-
+img {
+  float: right;
+}
+.container{
+  
+  height: 9px;
+  width: 728px;
+}
+h1,h2,h3,h4,p, body, div {
+  color: gray;
+  font-family: 'Open Sans', sans-serif;
 }
 .btn btn-primary btn-block {
   width: 20%;
